--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
   width: 1260px;
   height: 880px;
   background-color:#edf2c5;
+  margin:0px auto;
 }
 
 .nav_box  {
@@ -167,4 +168,16 @@ body {
   line-height: 1.83;
   text-align: left;
   margin-left: 15px;
+}
+.footer_box{
+  background-color: #778a50;
+  width: 1260px; 
+  height: 11px;
+  text-align: center;
+  margin:0px auto;
+  padding-top: 24px;
+  padding-bottom: 25px;
+  font-family: Arial;
+  font-size: 12px;
+  color: #edf2c5;
 }
