--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
   line-height: 0.82;
   letter-spacing: normal;
   text-align: left;
-  color: #778a50;
+  /* color: #778a50; */
+  color: #000000;
 }
 .arialB {
   font-family: "Arial Black", sans-serif;
